# rode-trip

./: .gitignore  README.md
road-trip-app/: .gitignore  (+17 more)
road-trip-backend/: .env.example  .gitignore  .http  API_TESTS.md  Cargo.toml  MIGRATIONS.md  README.md  package-lock.json  package.json  test-api.ps1  test-api.sh
road-trip-backend/migrations/: README.md  lib.rs
road-trip-backend/migrations/m20240101_000001_create_users_table/: mod.rs
road-trip-backend/migrations/m20240101_000002_create_sessions_table/: mod.rs
road-trip-backend/migrations/m20240101_000003_create_rooms_table/: mod.rs
road-trip-backend/migrations/m20240101_000004_create_room_members_table/: mod.rs
road-trip-backend/migrations/m20240101_000005_create_messages_table/: mod.rs
road-trip-backend/migrations/m20240101_000006_create_locations_table/: mod.rs
road-trip-backend/migrations/m20240101_000007_create_voice_calls_table/: mod.rs
road-trip-backend/postman/: Road Trip Buddy API.postman_collection.json
road-trip-backend/src/: main.rs
road-trip-backend/src/config/: database.rs  mod.rs
road-trip-backend/src/entities/: location.rs  message.rs  mod.rs  room.rs  room_member.rs  session.rs  user.rs  voice_call.rs
road-trip-backend/src/handlers/: auth.rs  location.rs  message.rs  mod.rs  room.rs
road-trip-backend/src/middleware/: auth.rs  cors.rs
road-trip-backend/src/routes/: mod.rs
road-trip-backend/src/services/: auth_service.rs  location_service.rs  message_service.rs  mod.rs  room_service.rs  voice_call_signaling.rs  websocket.rs
road-trip-backend/src/utils/: cookie.rs  mod.rs  password.rs  response.rs
(+23 files in other folders)
