[package]
name = "road-trip-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["full"] }

# Database
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
url = "2.5"

# Authentication & Security
argon2 = "0.5"
cookie = { version = "0.18", features = ["percent-encode"] }
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime utilities
futures = "0.3"

# WebSocket
tungstenite = "0.28"
tokio-tungstenite = "0.28"

# HTTP client (for testing)
reqwest = { version = "0.13", features = ["json"], optional = true }

[dev-dependencies]
tokio-test = "0.4"

# Migrations (optional, for sea-orm-cli)
[dependencies.sea-orm-migration]
version = "1.1"
features = ["sqlx-postgres", "runtime-tokio-rustls"]

[features]
default = []
